Fix for JS visibility and issue view text centering

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -358,7 +358,7 @@ a.list-group-item-transparent.active:focus {
   max-width: 50px; /* More than it will ever come, notice that this affects on animation duration */
 }
 
-.redactor_box .redactor_editor  {
+.redactor-box .redactor-editor, .inner-shadow  {
 	box-shadow: inset 2px 2px 6px #999 !important;
 }
 
